--- a/app/src/main/res/layout/offer.xml
+++ b/app/src/main/res/layout/offer.xml
@@ -2,11 +2,10 @@
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="150dp"
+    android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_marginHorizontal="10dp"
     android:layout_marginVertical="12dp"
-    app:cardBackgroundColor="@color/black"
     app:cardCornerRadius="10dp"
     app:cardElevation="8dp">
 
@@ -14,14 +13,12 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         >
-
         <com.google.android.material.imageview.ShapeableImageView
             android:id="@+id/imageview"
-            android:layout_width="150dp"
-            android:layout_height="150dp"
+            android:layout_width="match_parent"
+            android:layout_height="220dp"
             android:scaleType="fitXY"
             android:src="@drawable/im4"
-
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -29,18 +26,8 @@
 
         </com.google.android.material.imageview.ShapeableImageView>
 
-        <TextView
-            android:id="@+id/textview"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Mens Wear"
-            android:textColor="@color/white"
-            android:layout_marginBottom="4dp"
-            android:textSize="14sp"
-            android:textStyle="bold"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent" />
+
+
     </androidx.constraintlayout.widget.ConstraintLayout>
 
 </androidx.cardview.widget.CardView>
