--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,5 +8,7 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name='simplebackgroundcolour'>#F4A9C2</color>
+    <color name ="colorAcent">#CE2A5E</color>
+
 
 </resources>
