--- a/app/src/main/res/layout/activity_signup.xml
+++ b/app/src/main/res/layout/activity_signup.xml
@@ -1,219 +1,134 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:card_view="http://schemas.android.com/apk/res-auto"
     tools:context=".signup"
-   >
-
-    <EditText
-        android:id="@+id/editTextTextPassword"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:ems="10"
-        android:hint="@string/pass"
-        android:inputType="textPassword"
-        app:layout_constraintBottom_toTopOf="@+id/editTextTextPassword3"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.557"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/editTextPhone"
-        app:layout_constraintVertical_bias="0.39" />
-
-    <EditText
-        android:id="@+id/editTextTextPassword3"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="28dp"
-        android:ems="10"
-        android:hint="@string/cpassword"
-        android:inputType="textPassword"
-        app:layout_constraintBottom_toTopOf="@+id/button2"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.557"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.965" />
-
-    <EditText
-        android:id="@+id/editTextPhone"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:ems="10"
-        android:hint="@string/number"
-        android:inputType="phone"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.557"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.371" />
-
-    <Button
-        android:id="@+id/button2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Submit"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.692" />
-
-    <TextView
-        android:id="@+id/textView2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Already have an account?LOGIN"
-        android:textSize="20dp"
-        android:textStyle="bold"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/button2"
-        app:layout_constraintVertical_bias="0.049" />
-
-    <TextView
-        android:id="@+id/textView3"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="140dp"
-        android:text="Sign Up"
-        android:textSize="30dp"
-        android:textStyle="bold"
-        app:layout_constraintBottom_toTopOf="@+id/editTextPhone"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.0" />
+    android:orientation="vertical"
+    android:gravity="center"
+    android:background="@drawable/im22">
 
 
-    <androidx.coordinatorlayout.widget.CoordinatorLayout
-        android:id="@+id/bottom_layout"
+    <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
-        android:layout_height="50dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent">
+        android:layout_height="wrap_content"
+        android:layout_margin="30dp"
+        app:cardCornerRadius="20dp"
+        app:cardElevation="20dp"
+        android:background="@drawable/fragment" >
 
-        <com.google.android.material.bottomappbar.BottomAppBar
-            android:id="@+id/app_bar"
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        android:layout_gravity="center_horizontal"
+        android:padding="24dp">
+
+        <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_gravity="bottom"
-            android:backgroundTint="#f6f6f6"
-            app:fabCradleMargin="8dp"
-            app:fabCradleRoundedCornerRadius="50dp"
-            app:fabCradleVerticalOffset="6dp">
+            android:text="Sign Up"
+            android:textSize="30dp"
+           android:textAlignment="center"
+            android:textStyle="bold"
+            android:textColor="@color/black"/>
 
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content">
+<!--        <EditText-->
+<!--            android:layout_width="match_parent"-->
+<!--            android:layout_height="40dp"-->
+<!--            android:id="@+id/username1"-->
+<!--            android:background="@drawable/fragment"-->
+<!--            android:drawableLeft="@drawable/ic_baseline_person_24"-->
+<!--            android:padding="8dp"-->
+<!--            android:inputType="textPersonName"-->
+<!--            android:drawablePadding="8dp"-->
+<!--            android:hint="Enter Username"-->
+<!--            android:textColor="@color/black"-->
+<!--            android:layout_marginTop="40dp"/>-->
 
-                <LinearLayout
-                    android:id="@+id/home_button"
-                    android:layout_width="0dp"
-                    android:layout_height="match_parent"
-                    android:layout_weight="0.2"
-                    android:orientation="vertical"
-                    >
+<!--        <EditText-->
+<!--            android:layout_width="match_parent"-->
+<!--            android:layout_height="40dp"-->
+<!--            android:id="@+id/phone"-->
+<!--            android:background="@drawable/fragment"-->
+<!--            android:drawableLeft="@drawable/ic_baseline_call_24"-->
+<!--            android:padding="8dp"-->
+<!--            android:inputType="phone"-->
+<!--            android:drawablePadding="8dp"-->
+<!--            android:hint="@string/phone"-->
+<!--            android:textColor="@color/black"-->
+<!--            android:layout_marginTop="20dp"/>-->
 
-                    <ImageView
-                        android:id="@+id/homeimage"
-                        android:layout_width="match_parent"
-                        android:layout_height="20sp"
-                        android:layout_weight="1"
-                        app:srcCompat="@drawable/ic_baseline_home_24" />
+        <EditText
+            android:background="@drawable/fragment"
+            android:layout_width="match_parent"
+            android:layout_height="40dp"
+            android:id="@+id/email"
+            android:drawableLeft="@drawable/ic_baseline_email_24"
+            android:padding="8dp"
+            android:inputType="textEmailAddress"
+            android:drawablePadding="8dp"
+            android:hint="Enter Email Address"
+            android:textColor="@color/black"
+            android:layout_marginTop="20dp"/>
 
-                    <TextView
-                        android:id="@+id/hometext"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:text="Home"
-                        android:textAlignment="center"
-                        android:textColor="#676767"
-                        android:textSize="12sp" />
-                </LinearLayout>
 
-                <LinearLayout
-                    android:id="@+id/cart_button"
-                    android:layout_width="0dp"
-                    android:layout_height="match_parent"
-                    android:layout_weight="0.2"
-                    android:orientation="vertical"
-                    >
+        <EditText
+            android:layout_width="match_parent"
+            android:layout_height="40dp"
+            android:id="@+id/password"
+            android:background="@drawable/fragment"
+            android:drawableLeft="@drawable/ic_baseline_lock_24"
+            android:padding="8dp"
+            android:inputType="textPassword"
+            android:drawablePadding="8dp"
+            android:hint="@string/password"
+            android:textColor="@color/black"
+            android:layout_marginTop="20dp"/>
 
-                    <ImageView
-                        android:id="@+id/cartimage"
-                        android:layout_width="match_parent"
-                        android:layout_height="20sp"
-                        android:layout_weight="1"
-                        app:srcCompat="@drawable/ic_baseline_shopping_cart_24" />
 
-                    <TextView
-                        android:id="@+id/carttext"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:text="Cart"
-                        android:textAlignment="center"
-                        android:textColor="#676767"
-                        android:textSize="12sp" />
-                </LinearLayout>
+<!--        <EditText-->
+<!--            android:layout_width="match_parent"-->
+<!--            android:layout_height="40dp"-->
+<!--            android:id="@+id/cpassword"-->
+<!--            android:background="@drawable/fragment"-->
+<!--            android:drawableLeft="@drawable/ic_baseline_lock_24"-->
+<!--            android:padding="8dp"-->
+<!--            android:inputType="numberPassword"-->
+<!--            android:drawablePadding="8dp"-->
+<!--            android:hint="@string/cpassword"-->
+<!--            android:textColor="@color/black"-->
+<!--            android:layout_marginTop="20dp"/>-->
 
-                <LinearLayout
-                    android:id="@+id/category_button"
-                    android:layout_width="0dp"
-                    android:layout_height="match_parent"
-                    android:layout_weight="0.2"
-                    android:orientation="vertical"
-                    >
 
-                    <ImageView
-                        android:id="@+id/category_image"
-                        android:layout_width="match_parent"
-                        android:layout_height="20sp"
-                        android:layout_weight="1"
-                        app:srcCompat="@drawable/ic_baseline_category_24" />
 
-                    <TextView
-                        android:id="@+id/Category_text"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:text="Category"
-                        android:textAlignment="center"
-                        android:textColor="#676767"
-                        android:textSize="12sp" />
-                </LinearLayout>
 
-                <LinearLayout
-                    android:id="@+id/account_button"
-                    android:layout_width="0dp"
-                    android:layout_height="match_parent"
-                    android:layout_weight="0.2"
-                    android:orientation="vertical"
-                    >
+        <Button
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
+            android:id="@+id/SignUpbutton"
+            android:text="Sign Up"
+            android:textSize="18dp"
+            android:layout_marginTop="30dp"/>
 
-                    <ImageView
-                        android:id="@+id/accountimage"
-                        android:layout_width="match_parent"
-                        android:layout_height="20sp"
-                        android:layout_weight="1"
-                        app:srcCompat="@drawable/ic_baseline_person_24" />
 
-                    <TextView
-                        android:id="@+id/accounttext"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:text="Account"
-                        android:textAlignment="center"
-                        android:textColor="#676767"
-                        android:textSize="12sp" />
-                </LinearLayout>
 
-            </LinearLayout>
+    </LinearLayout>
 
-        </com.google.android.material.bottomappbar.BottomAppBar>
 
-    </androidx.coordinatorlayout.widget.CoordinatorLayout>
-</androidx.constraintlayout.widget.ConstraintLayout>
+</androidx.cardview.widget.CardView>
+
+    <TextView
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:text="Already a User?Login"
+    android:textSize="20dp"
+    android:id="@+id/textView2"
+    android:textColor="@color/white"
+    android:layout_marginBottom="20dp"/>
+
+
+</LinearLayout>
