--- a/app/src/main/res/layout/activity_login_sign_up.xml
+++ b/app/src/main/res/layout/activity_login_sign_up.xml
@@ -1,215 +1,104 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:card_view="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
+    android:gravity="center"
     tools:context=".login"
-    >
+    android:background="@drawable/im22">
 
-    <TextView
-        android:id="@+id/textView4"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="252dp"
-        android:text="Login"
-        android:textColor="@color/black"
-        android:textSize="30dp"
-        android:textStyle="bold"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.465"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <EditText
-        android:id="@+id/editTextPhone2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:autofillHints="phone"
-        android:ems="10"
-        android:hint="@string/phone"
-        android:inputType="phone"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.497"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView4"
-        app:layout_constraintVertical_bias="0.08" />
-
-    <EditText
-        android:id="@+id/editTextTextPassword2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:autofillHints="password"
-        android:ems="10"
-        android:hint="@string/password"
-        android:inputType="textPassword"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.497"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/editTextPhone2"
-        app:layout_constraintVertical_bias="0.083" />
-
-    <Button
-        android:id="@+id/button"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Submit"
-         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.484"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/editTextTextPassword2"
-        app:layout_constraintVertical_bias="0.137" />
-
-    <TextView
-        android:id="@+id/textView5"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="New User?SignUp"
-        android:textSize="15dp"
-        android:textStyle="bold"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.498"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/button"
-        app:layout_constraintVertical_bias="0.058" />
-
-
-    <androidx.coordinatorlayout.widget.CoordinatorLayout
-        android:id="@+id/bottom_layout"
-        android:layout_width="match_parent"
-        android:layout_height="50dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent">
-    <com.google.android.material.bottomappbar.BottomAppBar
-        android:id="@+id/app_bar"
+    <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_gravity="bottom"
-        android:backgroundTint="#f6f6f6"
-        app:fabCradleMargin="8dp"
-        app:fabCradleRoundedCornerRadius="50dp"
-        app:fabCradleVerticalOffset="6dp">
+        android:layout_margin="30dp"
+        app:cardCornerRadius="20dp"
+        app:cardElevation="20dp"
+        android:background="@drawable/fragment" >
 
-        <LinearLayout
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        android:layout_gravity="center_horizontal"
+        android:padding="24dp">
+
+        <TextView
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            android:text="Login"
+            android:textSize="30dp"
+            android:textAlignment="center"
+            android:textStyle="bold"
+            android:textColor="@color/black"/>
 
-            <LinearLayout
-                android:id="@+id/home_button"
-                android:layout_width="0dp"
-                android:layout_height="match_parent"
-                android:layout_weight="0.2"
-                android:orientation="vertical"
-                >
+<!--        <EditText-->
+<!--            android:layout_width="match_parent"-->
+<!--            android:layout_height="40dp"-->
+<!--            android:id="@+id/username"-->
+<!--            android:background="@drawable/fragment"-->
+<!--            android:drawableLeft="@drawable/ic_baseline_person_24"-->
+<!--            android:padding="8dp"-->
+<!--            android:drawablePadding="8dp"-->
+<!--            android:hint="@string/user"-->
+<!--            android:textColor="@color/black"-->
+<!--            android:layout_marginTop="40dp"/>-->
 
-                <ImageView
-                    android:id="@+id/homeimage"
-                    android:layout_width="match_parent"
-                    android:layout_height="20sp"
-                    android:layout_weight="1"
-                    app:srcCompat="@drawable/ic_baseline_home_24" />
-
-                <TextView
-                    android:id="@+id/hometext"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:text="Home"
-                    android:textAlignment="center"
-                    android:textColor="#676767"
-                    android:textSize="12sp" />
-            </LinearLayout>
-
-            <LinearLayout
-                android:id="@+id/cart_button"
-                android:layout_width="0dp"
-                android:layout_height="match_parent"
-                android:layout_weight="0.2"
-                android:orientation="vertical"
-                >
-
-                <ImageView
-                    android:id="@+id/cartimage"
-                    android:layout_width="match_parent"
-                    android:layout_height="20sp"
-                    android:layout_weight="1"
-                    app:srcCompat="@drawable/ic_baseline_shopping_cart_24" />
-
-                <TextView
-                    android:id="@+id/carttext"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:text="Cart"
-                    android:textAlignment="center"
-                    android:textColor="#676767"
-                    android:textSize="12sp" />
-            </LinearLayout>
-
-            <LinearLayout
-                android:id="@+id/category_button"
-                android:layout_width="0dp"
-                android:layout_height="match_parent"
-                android:layout_weight="0.2"
-                android:orientation="vertical"
-                >
-
-                <ImageView
-                    android:id="@+id/category_image"
-                    android:layout_width="match_parent"
-                    android:layout_height="20sp"
-                    android:layout_weight="1"
-                    app:srcCompat="@drawable/ic_baseline_category_24" />
-
-                <TextView
-                    android:id="@+id/Category_text"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:text="Category"
-                    android:textAlignment="center"
-                    android:textColor="#676767"
-                    android:textSize="12sp" />
-            </LinearLayout>
-
-            <LinearLayout
-                android:id="@+id/account_button"
-                android:layout_width="0dp"
-                android:layout_height="match_parent"
-                android:layout_weight="0.2"
-                android:orientation="vertical"
-                >
-
-                <ImageView
-                    android:id="@+id/accountimage"
-                    android:layout_width="match_parent"
-                    android:layout_height="20sp"
-                    android:layout_weight="1"
-                    app:srcCompat="@drawable/ic_baseline_person_24" />
-
-                <TextView
-                    android:id="@+id/accounttext"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:text="Account"
-                    android:textAlignment="center"
-                    android:textColor="#676767"
-                    android:textSize="12sp" />
-            </LinearLayout>
-
-
-
-        </LinearLayout>
-
-    </com.google.android.material.bottomappbar.BottomAppBar>
-    </androidx.coordinatorlayout.widget.CoordinatorLayout>
+        <EditText
+            android:layout_width="match_parent"
+            android:layout_height="40dp"
+            android:id="@+id/email1"
+            android:background="@drawable/fragment"
+            android:drawableLeft="@drawable/ic_baseline_email_24"
+            android:padding="8dp"
+            android:inputType="textEmailAddress"
+            android:drawablePadding="8dp"
+            android:hint="Enter Email Address"
+            android:textColor="@color/black"
+            android:layout_marginTop="20dp"/>
 
 
 
 
+        <EditText
+            android:layout_width="match_parent"
+            android:layout_height="40dp"
+            android:id="@+id/password1"
+            android:background="@drawable/fragment"
+            android:drawableLeft="@drawable/ic_baseline_lock_24"
+            android:padding="8dp"
+            android:drawablePadding="8dp"
+            android:hint="@string/pass"
+            android:textColor="@color/black"
+            android:layout_marginTop="20dp"/>
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+        <Button
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
+            android:id="@+id/loginbutton"
+            android:text="Login"
+            android:textSize="18dp"
+            android:layout_marginTop="30dp"/>
 
+
+            
+    </LinearLayout>
+
+
+    </androidx.cardview.widget.CardView>
+
+   <TextView
+       android:layout_width="wrap_content"
+       android:layout_height="wrap_content"
+       android:text="New User?Sign Up"
+       android:textSize="20dp"
+       android:id="@+id/textView5"
+       android:textColor="@color/white"
+       android:layout_marginBottom="20dp"/>
+
+
+</LinearLayout>
 
