--- a/app/src/main/res/layout/recent.xml
+++ b/app/src/main/res/layout/recent.xml
@@ -1,45 +1,47 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="120dp"
+    android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_marginHorizontal="10dp"
-    android:layout_marginVertical="12dp"
-    app:cardBackgroundColor="@color/black"
-    app:cardCornerRadius="10dp"
-    app:cardElevation="8dp">
+    android:layout_marginHorizontal="7dp"
+    android:layout_marginVertical="8dp"
+    app:cardCornerRadius="4dp"
+    app:cardElevation="10dp">
+
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        >
-
-        <com.google.android.material.imageview.ShapeableImageView
-            android:id="@+id/imageview"
-            android:layout_width="120dp"
+        android:layout_height="140dp"
+        android:background="@color/white" >
+        <ImageView
+            android:id="@+id/imageviewrecent"
+            android:layout_width="wrap_content"
             android:layout_height="120dp"
             android:scaleType="fitXY"
             android:src="@drawable/im4"
-            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent">
 
-        </com.google.android.material.imageview.ShapeableImageView>
+        </ImageView>
 
         <TextView
-            android:id="@+id/textview"
+            android:id="@+id/textviewrecent"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Mens Wear"
-            android:textColor="@color/white"
-            android:layout_marginBottom="4dp"
-            android:textSize="14sp"
+            android:layout_marginTop="10dp"
+            android:layout_marginBottom="10dp"
+            android:text="Dress"
+            android:textColor="@color/black"
+            android:textSize="15sp"
             android:textStyle="bold"
+            android:gravity="center_vertical"
+            app:layout_constraintTop_toBottomOf="@id/imageviewrecent"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent" />
+            app:layout_constraintStart_toStartOf="parent"
+             />
+
     </androidx.constraintlayout.widget.ConstraintLayout>
 
 </androidx.cardview.widget.CardView>
